a11y: #4265 stop links overflowing

--- a/src/themes/clean/assets/css/clean.css
+++ b/src/themes/clean/assets/css/clean.css
@@ -514,3 +514,6 @@ header svg {
     aspect-ratio: 16/9;
     margin: 1rem 0;
 }
+a {
+    overflow-wrap: break-word;
+}
